<resources>
    <string name="app_name">TravelPoint</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="button_login">Logar</string>
    <string name="user_icon">User Icon</string>
    <string name="menu_1">Menu 1</string>
    <string name="user_avatar" />
</resources>