<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FE8300">

    <!-- ==================== SCREEN_COMPONENTS ==================== -->
    <!-- HERO -->
    <ImageView
        android:id="@+id/login_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/login_hero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.375"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1" />
    <!-- FRAME -->
    <FrameLayout
        android:id="@+id/login_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_component_frame"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="1"
        tools:ignore="ExtraText" />
    <!-- AVATAR -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="-60dp"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/login_icon"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:layout_constraintBottom_toTopOf="@+id/login_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="1"/>

    <!-- ==================== FRAME_COMPONENTS ==================== -->
    <!-- TITLE -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:text="@string/login"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_avatar"
        tools:ignore="HardcodedText,MissingConstraints" />
    <!-- EMAIL_GROUP -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30sp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/login_frame"
        app:layout_constraintStart_toStartOf="@+id/login_frame"
        app:layout_constraintTop_toBottomOf="@+id/textView7">
        <!-- TITLE -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/digite_seu_email"
            android:textColor="#303030"
            android:textSize="16sp"
            android:textStyle="normal" />
        <!-- INPUT -->
        <EditText
            android:id="@+id/login_input_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="FFF"
            android:background="@drawable/rounded_component"
            android:backgroundTint="#F0F0F0"
            android:ems="10"
            android:foregroundTint="#CECECE"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />
    </LinearLayout>
    <!-- PASSWORD_GROUP -->
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30sp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/login_frame"
        app:layout_constraintStart_toStartOf="@+id/login_frame"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
        <!-- TITLE -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/digite_sua_senha"
            android:textColor="#303030"
            android:textSize="16sp"
            android:textStyle="normal" />
        <!-- INPUT -->
        <EditText
            android:id="@+id/login_input_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="FFF"
            android:background="@drawable/rounded_component"
            android:backgroundTint="#F0F0F0"
            android:ems="10"
            android:foregroundTint="#CECECE"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />
        <!-- LINK -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:text="Esqueceu a senha?"
            android:textColor="#D58612"
            android:textSize="12sp"
            android:textStyle="normal" />
    </LinearLayout>
    <!-- BUTTON -->
    <Button
        android:id="@+id/login_button_start"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#CB5400"
        android:foregroundTint="#CA5400"
        android:onClick="onLogin"
        android:padding="15dp"
        android:text="Acessar"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/login_frame"
        app:layout_constraintStart_toStartOf="@+id/login_frame"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
    <!-- PARAGRA -->
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_frame"
        app:layout_constraintTop_toBottomOf="@+id/login_button_start"
        tools:ignore="MissingConstraints">
        <!-- PARAGRA -->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="Seu primeiro acesso?"
            android:textColor="#303030"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/login_frame"
            app:layout_constraintStart_toStartOf="@+id/login_frame"
            app:layout_constraintTop_toBottomOf="@+id/login_button_start" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <!-- LINK -->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="Cadastrar-se"
            android:textColor="#FFB341"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/login_frame"
            app:layout_constraintStart_toStartOf="@+id/login_frame"
            app:layout_constraintTop_toBottomOf="@+id/login_button_start" />
    </LinearLayout>
    <!-- CONTACT_BUTTON -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/login_frame"
        app:layout_constraintStart_toStartOf="@+id/login_frame"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
        <!-- GOOGLE_BUTTON -->
        <ImageButton
            android:id="@+id/google_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:src="@drawable/google_contact_button" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <!-- FACEBOOK_BUTTON -->
        <ImageButton
            android:id="@+id/facebook_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:src="@drawable/facebook_contact_button" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <!-- APPLE_BUTTON -->
        <ImageButton
            android:id="@+id/apple_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:src="@drawable/apple_contact_button" />
    </LinearLayout>
    <!-- HEADER_LOGO -->
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- HEADER_TEXT -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Seu próximo destino te aguarda"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_background" />
    <!-- HEADER_MENU -->
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#00FFFFFF"
        android:src="@drawable/hamburger_menu_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>